update converting: append to regular python list then convert to ndarray

--- a/senior_research/preprocessing.ipynb
+++ b/senior_research/preprocessing.ipynb
@@ -103,19 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "classes = ['car', 'hydrant', 'crosswalk', 'traffic light']\n",
     "\n",
-    "images = np.array([])\n",
-    "labels = np.array([])"
+    "images = []\n",
+    "labels = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {
     "tags": []
    },
@@ -1138,27 +1138,29 @@
     "    if (entry.path.endswith(\".jpg\") or entry.path.endswith(\".png\")) and entry.is_file():\n",
     "        img = load_img(entry.path)\n",
     "        converted = img_to_array(img)\n",
-    "        images = np.append(images, [converted])\n",
-    "        labels = np.append(labels, 0)\n",
+    "        images.append(converted)\n",
+    "        labels.append(0)\n",
     "        print(i, \" successful\")\n",
     "        i += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "225.0\n"
+      "(1000,)\n[[[225. 219. 206.]\n  [224. 218. 205.]\n  [222. 218. 205.]\n  ...\n  [ 45.  43.  43.]\n  [ 41.  45.  46.]\n  [ 37.  40.  33.]]\n\n [[238. 232. 225.]\n  [237. 232. 224.]\n  [237. 232. 225.]\n  ...\n  [ 32.  34.  36.]\n  [ 28.  35.  37.]\n  [ 33.  36.  30.]]\n\n [[236. 234. 230.]\n  [237. 233. 229.]\n  [238. 233. 231.]\n  ...\n  [ 22.  27.  31.]\n  [ 20.  28.  33.]\n  [ 31.  34.  31.]]\n\n ...\n\n [[ 18.  21.  19.]\n  [ 17.  20.  19.]\n  [ 16.  19.  18.]\n  ...\n  [150. 146. 145.]\n  [139. 135. 134.]\n  [112. 108. 105.]]\n\n [[ 19.  19.  22.]\n  [ 19.  18.  22.]\n  [ 18.  16.  21.]\n  ...\n  [155. 150. 145.]\n  [132. 128. 124.]\n  [ 93.  89.  85.]]\n\n [[ 21.  17.  22.]\n  [ 21.  16.  22.]\n  [ 20.  14.  20.]\n  ...\n  [196. 190. 182.]\n  [170. 165. 159.]\n  [109. 103.  99.]]]\n"
      ]
     }
    ],
    "source": [
-    "print(images[0,])"
+    "images = np.asarray(images)\n",
+    "print(images.shape)\n",
+    "print(images[0])"
    ]
   },
   {
